<resources>
    <string name="app_name">MEWAT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_song">No hay canciones</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="songTitle">Unknown Song</string>
    <string name="songAlbum">Unknown Album</string>
    <string name="album_thumbnail">Album thumbnail</string>
    <string name="playButton">Play Button</string>
    <string name="skip_next">Skip Next</string>
    <string name="skip_previous">Skip Previous</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="no_estoy_registrado">No estoy registrado</string>
    <string name="user">User</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
