<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlos.mewat.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="300dp"
        android:layout_above="@+id/txtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/no_estoy_registrado"
        android:src="@mipmap/logoapp" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername"
        android:layout_below="@+id/userText"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="177dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtUsername"
        android:layout_alignBottom="@+id/txtUsername"
        android:layout_alignLeft="@+id/passText"
        android:layout_alignStart="@+id/passText"
        android:text="@string/user" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignBottom="@+id/txtPassword"
        android:layout_toLeftOf="@+id/txtUsername"
        android:layout_toStartOf="@+id/txtUsername"
        android:text="@string/password" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="onClick"
        android:text="@string/no_estoy_registrado" />


</RelativeLayout>
