<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlos.mewat.PlayerActivity">

    <!-- Song info-->

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/songTitle" />

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/songAlbum" />

    <ImageButton
        android:id="@+id/btnPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/songTitle"
        android:layout_toEndOf="@+id/album_thumbnail"
        android:layout_toRightOf="@+id/album_thumbnail"
        app:srcCompat="@drawable/ic_queue_music_black_24dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/album_thumbnail"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_above="@+id/timerDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:contentDescription="@string/album_thumbnail"
        android:src="@mipmap/logoapp"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />


    <!-- Progress Bar/Seek bar / Times -->
    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp" />

    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_above="@id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp">
        <!-- Current Duration Label -->
        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#eeeeee"
            android:textStyle="bold"/>
        <!-- Total Duration Label -->
        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#04cbde"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Buttons media Control -->
    <!-- Repeat Button -->
    <ImageButton
        android:id="@+id/btnRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPrevious"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        app:srcCompat="@drawable/ic_repeat_black_24dp" />

    <!-- Shuffle Button -->
    <ImageButton
        android:id="@+id/btnShuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnPlaylist"
        android:layout_alignRight="@+id/btnPlaylist"
        android:layout_alignTop="@+id/btnNext"
        app:srcCompat="@drawable/ic_shuffle_black_24dp" />

    <!-- Play Button -->
    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/playButton"
        app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

    <!-- Next Song Button -->
    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPlay"
        android:layout_toEndOf="@+id/albumTitle"
        android:layout_toRightOf="@+id/albumTitle"
        android:contentDescription="@string/skip_next"
        app:srcCompat="@drawable/ic_skip_next_black_24dp" />

    <!-- Previous Song Button -->
    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPlay"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_toLeftOf="@+id/albumTitle"
        android:layout_toStartOf="@+id/albumTitle"
        android:contentDescription="@string/skip_previous"
        app:srcCompat="@drawable/ic_skip_previous_black_24dp" />



</RelativeLayout>
